--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc' // jdbc 드라이버
+	runtimeOnly 'com.h2database:h2' // database가 제공하는 클라이언트 필요
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
