--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 //	implementation 'org.springframework.boot:spring-boot-starter-jdbc' // jdbc 드라이버
+	implementation 'org.springframework.boot:spring-boot-starter-aop:2.7.3'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.h2database:h2' // database가 제공하는 클라이언트 필요
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
