--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,19 @@ group = 'practice'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '19'
 
+configurations{
+	compileOnly{
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.projectlombok:lombok:1.18.22'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
