feat(validation): Bean Validation 수정에 적용

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -5,5 +5,6 @@ totalPriceMin=가격 * 수량의 합은 {0}원 이상이어야 합니다. 현재
 
 # Bean Validation 추가
 NotBlank={0} 공백 불가
+NotNull={0}, Null 값 불가
 Range={0}, {2} ~ {1} 허용
 Max={0}, 최대 {1}
