--- a/advanced/build.gradle
+++ b/advanced/build.gradle
@@ -1,12 +1,19 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.0'
-	id 'io.spring.dependency-management' version '1.1.0'
+	id 'org.springframework.boot' version '3.1.3'
+	id 'io.spring.dependency-management' version '1.1.3'
+	id 'org.jetbrains.kotlin.jvm' version '1.9.10'
+	id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.10'
+	id 'org.jetbrains.kotlin.plugin.spring' version '1.9.10'
 }
 
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+}
 
 configurations {
 	compileOnly {
@@ -26,8 +33,21 @@ dependencies {
 	//테스트에서 lombok 사용
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+}
+
+tasks.withType(KotlinCompile) {
+	kotlinOptions {
+		freeCompilerArgs += '-Xjsr305=strict'
+		jvmTarget = '17'
+	}
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+kotlin {
+	jvmToolchain(17)
 }
