--- a/jdbc2/src/main/resources/application.yml
+++ b/jdbc2/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
-  h2:
-    console:
-      enabled: true  # H2 Console? ???? ?? (H2 Console? H2 Database? UI? ????? ??)
-      path: /h2-console  # H2 Console? Path
+#  h2:
+#    console:
+#      enabled: true  # H2 Console? ???? ?? (H2 Console? H2 Database? UI? ????? ??)
+#      path: /h2-console  # H2 Console? Path
   datasource:
     driver-class-name: org.h2.Driver  # Database? H2? ?????.
-    url: jdbc:h2:~/test  # H2 ?? ??
+    url: jdbc:h2:tcp://localhost/~/test  # H2 ?? ??
     username: sa  # H2 ?? ? ??? username ?? (??? ??? ??)
     password:  # H2 ?? ? ??? password ?? (??? ??? ??)
