--- a/springboot/embed/build.gradle
+++ b/springboot/embed/build.gradle
@@ -24,7 +24,7 @@ test {
 //일반 Jar 생성
 task buildJar(type: Jar) {
     manifest {
-        attributes 'Main-Class': 'embed.EmbedTomcatSpringMain'
+        attributes 'Main-Class': 'hello.embed.EmbedTomcatSpringMain'
     }
     with jar
 }
@@ -32,7 +32,7 @@ task buildJar(type: Jar) {
 //Fat Jar 생성
 task buildFatJar(type: Jar) {
     manifest {
-        attributes 'Main-Class': 'embed.EmbedTomcatSpringMain'
+        attributes 'Main-Class': 'hello.embed.EmbedTomcatSpringMain'
     }
     duplicatesStrategy = DuplicatesStrategy.WARN
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
