--- a/jdbc2/src/main/resources/application.yml
+++ b/jdbc2/src/main/resources/application.yml
@@ -4,7 +4,8 @@ spring:
       enabled: true
       path: /h2-console
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:tcp://localhost/~/test
+    url: jdbc:h2:mem:testdb
     username: sa
-    password:
+  jpa:
+    hibernate:
+      ddl-auto: none
